--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,14 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<div id="user_nav" style="float:right;">
+  <% if client_signed_in? %>
+    Connecté sur <%= current_user.email %>. Ce n'est pas vous ?
+    <%= link_to "Se déconnecter", destroy_client_session_path %>
+  <% else %>
+    <%= link_to "S'inscrire", new_client_registration_path %> ou <%= link_to "se connecter", new_client_session_path %>
+  <% end %>
+</div>
 <%= yield %>
 
 </body>
