--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Clients#new</h1>
-<p>Find me in app/views/clients/new.html.erb</p>
+<div id="center_it">
+<h1>Nouveau client</h1>
+<%= semantic_form_for(@client) do |f| %>
+      <% f.inputs do %>
+          <%= f.input :email %>
+          <%= f.input :encrypted_password %>
+          <%= f.input :first_name %>
+          <%= f.input :last_name %>
+          <%= f.input :has_code %>
+          <%= f.input :has_car_permit %>
+          <%= f.input :has_moto_permit %>
+          <%= f.input :passing_code %>
+          <%= f.input :passing_car_permit %>
+          <%= f.input :passing_moto_permit %>
+          <%= f.input :agency %>
+
+      <% end %>
+
+      <% f.buttons do %>
+          <%= f.commit_button %>
+      <% end %>
+<% end %>
+</div>
+
