--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -125,14 +125,13 @@ input, button, select {
 }
 
 .actionize {
-    height:28px;
+    background: url("../images/bg_button.png") repeat-x scroll 0 0 transparent;
+    border: 1px solid #DCDCDC;
+    border-radius: 5px 5px 5px 5px;
+    height: 28px;
+    margin-left: -1px;
+    margin-top: -1px;
     width: 180px;
-    background: url("../images/bg_button.png") repeat-x;
-    border: 1px solid #dcdcdc;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    margin-top:10px;
 }
 
 #contenu {
@@ -181,4 +180,22 @@ input, button, select {
 #user_nav {
     padding-top:10px;
     padding-right:10px;
+}
+
+.menu_container {
+    width: 180px;
+    list-style-type:square;
+    background:white;
+    border: 1px solid #cccccc;
+    -moz-border-radius: 3px;
+    margin-bottom:10px;
+    padding:0;
+
+}
+
+.menu_container  ul {
+    clear:both;
+    width: 180px;
+    list-style-type:square;
+    display:none;
 }
