--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
     <div class="menu_container">
     <a href="#"><div class="element_menu actionize"><p>Gestion des Agences</p><div class="dropdown"></div> </div></a>
     <ul class="menu_list">
-      <a href="#"><li>Liste lien</li></a>
+      <a href="<%= url_for agencies_path %>"><li>Liste des Agences</li></a>
+      <a href="<%= url_for new_agency_path %>"><li>Ajouter une Agence</li></a>
     </ul>
   </div>
 
