--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,17 @@
   </div>
   <div style="clear:both;"></div>
   <div id="menu_gauche">
+
+
+  <div class="menu_container">
+    <a href="#"><div class="element_menu actionize"><p>Leader</p><div class="dropdown"></div></div>  </a>
+    <ul class="menu_list">
+      <a href="<%= url_for new_formation_path %>"><li>Créer une formation</li></a>
+      <a href="<%= url_for formations_path %>"><li>Liste des formations</li></a>
+      <a href="<%= url_for new_agency_path %>"><li>Voir mon planning</li></a>
+    </ul>
+  </div>
+
     <div class="menu_container">
     <a href="#"><div class="element_menu actionize"><p>Gestion des Agences</p><div class="dropdown"></div> </div></a>
     <ul class="menu_list">
@@ -41,23 +52,19 @@
   <div class="menu_container">
     <a href="#"><div class="element_menu actionize"><p>Gestion des Leaders</p><div class="dropdown"></div></div>  </a>
     <ul class="menu_list">
-      <a href="#"><li>Liste lien</li></a>
+      <a href="<%= url_for leaders_path %>"><li>Liste des Leaders</li></a>
+      <a href="<%= url_for new_agency_path %>"><li>Ajouter un Leader</li></a>
     </ul>
   </div>
 
   <div class="menu_container">
     <a href="#"><div class="element_menu actionize"><p>Gestion des Élèves</p><div class="dropdown"></div></div>     </a>
     <ul class="menu_list">
-      <a href="#"><li>Liste lien</li></a>
+      <a href="<%= url_for clients_path %>"><li>Liste des Élèves</li></a>
+      <a href="<%= url_for new_agency_path %>"><li>Présenter un élève</li></a>
     </ul>
   </div>
 
-  <div class="menu_container">
-    <a href="#"><div class="element_menu actionize"><p>Gestion des Formations</p><div class="dropdown"></div></div></a>
-    <ul class="menu_list">
-      <a href="#"><li>Liste lien</li></a>
-    </ul>
-  </div>
 
 </div>
 
