--- a/app/views/formations/edit.html.erb
+++ b/app/views/formations/edit.html.erb
@@ -1,14 +1,14 @@
 <div id="center_it">
-<h1>Editer la Formation</h1>
+<h1>Éditer une Formation</h1>
 
 <%= semantic_form_for(@formation) do |f| %>
       <% f.inputs do %>
           <%= f.input :date %>
-          <%= f.input :agency %>
-          <%= f.input :type %>
-          <%= f.input :users_number %>
-          <%= f.input :trainer %>
-          <%= f.input :place %>
+          <%= f.input :datefin %>
+          <%= f.input :category, :as => :select, :collection => ["code","conduite auto","conduite moto"], :include_blank => false %>
+          <%= f.input :users_number, :as => :select , :collection => (1..50).to_a, :include_blank => false %>
+          <%= f.input :trainer, :as => :select, :include_blank => false, :collection => Leader.find(:all) %>
+          <%= f.input :place ,  :include_blank => false%>
       <% end %>
 
       <% f.buttons do %>
