Started with json event for full calendar

--- a/app/views/leaders/calendar.html.erb
+++ b/app/views/leaders/calendar.html.erb
@@ -1,1 +1,13 @@
+<script type="text/javascript">
+  jQuery(document).ready(function() {
+      var obj = <%= raw @formations %>
+
+  $('#calendar').fullCalendar({
+          startParam: 'date',
+          endParam: 'datefin',
+          events: obj
+});
+  });
+</script>
+
 <div id='calendar'></div>
