--- a/app/views/leaders/calendar.html.erb
+++ b/app/views/leaders/calendar.html.erb
@@ -1,12 +1,28 @@
 <script type="text/javascript">
   jQuery(document).ready(function() {
-      var obj = <%= raw @formations %>
 
-  $('#calendar').fullCalendar({
-          startParam: 'date',
-          endParam: 'datefin',
-          events: obj
-});
+	var date = new Date();
+		var d = date.getDate();
+		var m = date.getMonth();
+		var y = date.getFullYear();
+
+      $('#calendar').fullCalendar({
+			editable: true,
+			events:  [
+                <% @formations.each do |formation| %>
+
+                {
+                    title: '<%= formation.category %>',
+                    start:  new Date(y, m, d, 10, 30),
+					allDay: false
+
+                },
+                <% end %>
+            ]
+		});
+
+
+
   });
 </script>
 
