--- a/app/views/formations/edit.html.erb
+++ b/app/views/formations/edit.html.erb
@@ -1,10 +1,10 @@
 <div id="center_it">
-<h1>Éditer une Formation</h1>
+  <h1>Éditer une Formation</h1>
 
-<%= semantic_form_for(@formation) do |f| %>
+  <%= semantic_form_for(@formation) do |f| %>
       <% f.inputs do %>
-          <%= f.input :date %>
-          <%= f.input :datefin %>
+          <%= f.input :date, :as => :string %>
+          <%= f.input :datefin, :as => :string %>
           <%= f.input :category, :as => :select, :collection => ["code","conduite auto","conduite moto"], :include_blank => false %>
           <%= f.input :users_number, :as => :select , :collection => (1..50).to_a, :include_blank => false %>
           <%= f.input :trainer, :as => :select, :include_blank => false, :collection => Leader.find(:all) %>
@@ -14,5 +14,5 @@
       <% f.buttons do %>
           <%= f.commit_button %>
       <% end %>
-<% end %>
+  <% end %>
 </div>
