--- a/app/views/formations/new.html.erb
+++ b/app/views/formations/new.html.erb
@@ -3,8 +3,8 @@
 
 <%= semantic_form_for(@formation) do |f| %>
       <% f.inputs do %>
-          <%= f.input :date %>
-          <%= f.input :datefin %>
+          <%= f.input :date, :as => :string %>
+          <%= f.input :datefin, :as => :string %>
           <%= f.input :category, :as => :select, :collection => ["code","conduite auto","conduite moto"], :include_blank => false %>
           <%= f.input :users_number, :as => :select , :collection => (1..50).to_a, :include_blank => false %>
           <%= f.input :trainer, :as => :select, :include_blank => false, :collection => Leader.find(:all) %>
