Table format design

--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -1,19 +1,11 @@
-<h1>Agencies#index</h1>
+<h1>Les Agences SafeDriving</h1>
 <table class="forum_table">
-
-
-  <tr>
-    <th>Agences</th>
-  </tr>
-
 
   <% @agencies.each do |agency| %>
       <tr onclick="location.href='<%= url_for agency_path(agency.id) %>'" class="forum_list">
-        <td class="forum_name">
-          <p><a href="<%= url_for agency_path(agency.id) %>"><%= agency.city %></a></p>
-          <p><%= link_to "éditer l'agence", edit_agency_path(agency.id) %></p>
-          <%= link_to "Supprimer", agency_path(agency.id), :confirm => "Are you sure?", :method => :delete %>
-        </td>
+        <td><a href="<%= url_for agency_path(agency.id) %>"><%= agency.city %></a></td>
+        <td class="link"><%= link_to "Éditer", edit_agency_path(agency.id) %></td>
+        <td class="link"><%= link_to "Supprimer", agency_path(agency.id), :confirm => "Are you sure?", :method => :delete %></td>
 
       </tr>
   <% end %>
@@ -21,5 +13,5 @@
 </table>
 
 <div>
-        <%= link_to "Créer une nouvelle agence", new_agency_path %>
-  </div>
+  <%= link_to "Créer une nouvelle agence", new_agency_path %>
+</div>
