--- a/app/views/leaders/calendar.html.erb
+++ b/app/views/leaders/calendar.html.erb
@@ -13,6 +13,7 @@
                 {
                     title: '<%= formation.category.titleize + ' #' + formation.id.to_s %>',
                     start:  new Date(<%= formation.date.strftime('%Y')%>, <%= formation.date.strftime('%m').to_i - 1 %>, <%= formation.date.strftime('%d').to_i%>, <%= formation.date.strftime('%H').to_i %>, <%= formation.date.strftime('%M').to_i %>),
+                    end:  new Date(<%= formation.datefin.strftime('%Y')%>, <%= formation.datefin.strftime('%m').to_i - 1 %>, <%= formation.datefin.strftime('%d').to_i%>, <%= formation.datefin.strftime('%H').to_i %>, <%= formation.datefin.strftime('%M').to_i %>),
 					allDay: false
 
                 },
