--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
       <script>jQuery.noConflict();</script>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :all%>
+  <%= javascript_include_tag 'highcharts' %> <!--[if IE]> <%= javascript_include_tag 'excanvas.compiled' %> <![endif]-->
 
 
   <%= csrf_meta_tag %>
