--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
       <a href="#"><div class="element_menu actionize"><p>Gestion des Leaders</p><div class="dropdown"></div></div>  </a>
       <ul class="menu_list">
         <a href="<%= url_for leaders_path %>"><li>Liste des Leaders</li></a>
-        <a href="<%= url_for new_agency_path %>"><li>Ajouter un Leader</li></a>
+        <a href="<%= url_for new_leader_registration_path %>"><li>Ajouter un Leader</li></a>
       </ul>
     </div>
 
@@ -83,6 +83,7 @@
       <a href="#"><div class="element_menu actionize"><p>Gestion des Élèves</p><div class="dropdown"></div></div>     </a>
       <ul class="menu_list">
         <a href="<%= url_for clients_path %>"><li>Liste des Élèves</li></a>
+        <a href="<%= url_for new_client_registration_path %>"><li>Ajouter un élève</li></a>
         <a href="<%= url_for new_agency_path %>"><li>Présenter un élève</li></a>
       </ul>
     </div>
