--- a/app/views/registrations_leaders/new.html.erb
+++ b/app/views/registrations_leaders/new.html.erb
@@ -8,6 +8,8 @@
         <%= f.input :first_name %>
         <%= f.input :last_name %>
         <%= f.input :email %>
+        <%= f.input :role %>
+        <%= f.input :agence %>
         <%= f.input :password %>
         <%= f.input :password_confirmation %>
         <% end %>
