--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,8 @@
       <% elsif  leader_signed_in? %>
                     Connecté sur Leader <%= current_leader.email %>. Ce n'est pas vous ?
       <%= link_to "Se déconnecter", destroy_client_session_path %>
+      <% else %>
+      <%= link_to "Connexion", :root %>
       <% end %>
     </div>
   </div>
@@ -76,7 +78,7 @@
       <a href="#"><div class="element_menu actionize"><p>Gestion des Leaders</p><div class="dropdown"></div></div>  </a>
       <ul class="menu_list">
         <a href="<%= url_for leaders_path %>"><li>Liste des Leaders</li></a>
-        <a href="<%= url_for new_leader_registration_path %>"><li>Ajouter un Leader</li></a>
+        <a href="<%= url_for new_leader_session_path %>"><li>Ajouter un Leader</li></a>
       </ul>
     </div>
 
@@ -84,7 +86,7 @@
       <a href="#"><div class="element_menu actionize"><p>Gestion des Élèves</p><div class="dropdown"></div></div>     </a>
       <ul class="menu_list">
         <a href="<%= url_for clients_path %>"><li>Liste des Élèves</li></a>
-        <a href="<%= url_for new_client_registration_path %>"><li>Ajouter un élève</li></a>
+        <a href="<%= url_for new_client_session_path %>"><li>Ajouter un élève</li></a>
       </ul>
     </div>
 
