--- a/app/views/clients/calendar.html.erb
+++ b/app/views/clients/calendar.html.erb
@@ -17,6 +17,16 @@
 
                 },
                 <% end %>
+				<% @formations_participations.each do |formation| %>
+
+                {
+                    title: '<%= formation.category.titleize + ' #' + formation.id.to_s %>',
+                    start:  new Date(<%= formation.date.strftime('%Y')%>, <%= formation.date.strftime('%m').to_i - 1 %>, <%= formation.date.strftime('%d').to_i%>, <%= formation.date.strftime('%H').to_i %>, <%= formation.date.strftime('%M').to_i %>),
+					allDay: false
+
+                },
+                <% end %>
+				
             ]
 		});
 
