--- a/app/views/content/index.html.erb
+++ b/app/views/content/index.html.erb
@@ -3,6 +3,9 @@
       <% elsif  leader_signed_in? %>
       Mode Leader
       <% else %>
-      <p><%= link_to "Connexion Leader", new_leader_registration_path %></p>
-      <p><%= link_to "Connexion Client", new_client_registration_path %></p>
+          <img src="images/log.png" />
+      <a href="<%= url_for new_leader_registration_path %>" class="leader"></a>
+      <a href="<%= url_for new_client_registration_path %>" class="client"></a>
+      <a href="<%= url_for new_client_registration_path %>" class="import"></a>
+
       <% end %>
