Encore pas mal de modifs

--- a/app/views/content/index.html.erb
+++ b/app/views/content/index.html.erb
@@ -4,8 +4,8 @@
       Mode Leader
       <% else %>
           <img src="images/log.png" />
-      <a href="<%= url_for new_leader_registration_path %>" class="leader"></a>
-      <a href="<%= url_for new_client_registration_path %>" class="client"></a>
-      <a href="<%= url_for new_client_registration_path %>" class="import"></a>
+      <a href="<%= url_for new_leader_session_path %>" class="leader"></a>
+      <a href="<%= url_for new_client_session_path %>" class="client"></a>
+      <a href="<%= url_for new_client_session_path %>" class="import"></a>
 
       <% end %>
