--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -290,6 +290,13 @@ height:30px;
     color:white;
 }
 
+input {
+    border: 1px solid #9b9b9b;
+    padding:5px;
+    -moz-border-radius:2px;
+    border-radius:2px;
+    -webkit-border-radius:2px;
+}
 
 
 
