--- a/app/views/clients/suivi.html.erb
+++ b/app/views/clients/suivi.html.erb
@@ -54,6 +54,6 @@
     });
 				
 </script>
-<h1>Suivi des Élèves : <%= @user.first_name.titleize + ' ' + @user.last_name.titleize %></h1>
+<h1>Suivi des Élèves : Romain DELHOUTE </h1>
 
 		<div id="container" style="width: 750px; height: 400px; margin: 0 auto"></div>
